--- a/src/main.css
+++ b/src/main.css
@@ -14,3 +14,25 @@ header {
 h1 {
     margin-left: 20px;
 }
+
+table {
+    width: 900px;
+    border-collapse: collapse;
+}
+
+thead {
+    background-color: rgb(23, 154, 235);
+    text-align: left;
+}
+
+tr:nth-child(even) {
+    background-color: rgba(169, 220, 251, 0.753)
+}
+
+.center {
+    text-align: center;
+}
+
+.capitalize {
+    text-transform: capitalize;
+}
